# klingon_transcribe

./: .age.pub  .env.example  .gitignore  .pre-commit-config.yaml  .pushrc  .sops.yaml  .sopsrc  API_SCHEMA.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  SECURITY.md  clean_cuda.py  docker-compose.yaml  pyproject.toml  requirements.in  requirements.txt  reset.sh  scratch.md  scratch.py  setup.py  setup_env.py  test_enhance.py  test_speaker_split.py
corpus/: align.ctm  align.json  aligned.ctm  aligned.json  gen_ctm.py  test_pcm.txt  transcript.txt
klingon_transcribe/: __init__.py  aligner.py  api.py  audio_processor.py  cli.py  config.py  data_bundle_generator.py  diarizer.py  main.py  output_generator.py  server.py  srt_generator.py  transcriber.py  utils.py  vad.py
klingon_transcribe/core/: diarization.py  speech_to_text.py
klingon_transcribe/output/: plain_text.py  srt.py  timecoded_text.py
klingon_transcribe/preprocessing/: audio_enhancement.py  noise_removal.py
klingon_transcribe/storage/: http.py  local.py  s3.py
notebooks/: Silero_VAD_Demo.ipynb  Silero_VAD_Demo_Example.ipynb  requirements.txt  setup.sh
notebooks/audio_processor/: audio_processor_compress.ipynb  audio_processor_demucs.ipynb  audio_processor_highpass.ipynb  audio_processor_noisereducer.ipynb  audio_processor_normalize.ipynb
notebooks/diarize/: diarize_nemo.ipynb  diarize_pyannote.ipynb  diarize_webrtcvad.ipynb
notebooks/modules/: __init__.py  disable_warnings.py  utils.py
notebooks/transcriber/: transcriber_whisper.ipynb  transcriber_whisperx.ipynb
notebooks/vad/: vad_nemo.ipynb  vad_pyannote.ipynb  vad_silero.ipynb  vad_webrtcvad.ipynb
scripts/: .pushrc_template  push
testing/: test_enhance_audio.py  test_librosa_highpass.py
tests/: nemo_vad.py  test_core.py  test_enhance.py  test_output.py  test_preprocessing.py  test_storage.py  test_vad.py  webrtcvad_test.py
